# CSManager

./: .gitignore
backend/: manage.py  pyproject.toml  requirements.txt
backend/API/: admin.py  models.py  serializers.py  urls.py  views.py
backend/API/migrations/: 0001_initial.py
backend/CSManager/: settings.py  urls.py
backend/documents/: lecture 1.md
